--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <header class="container">
-  <div class="row pt-4 pb-4">
+  <div class="row pt-2">
     <div class="col">
       <h1 id="page-title" class="text-dark text-center">
         Sample Angular App for <span class="text-danger">AWS CodePipeline Step by Step</span>
       </h1>
       <hr>
-      <h2 class="text-end">
-        <span class="badge bg-info">Version: 1.1</span>
+      <h2 class="text-right">
+        <span class="badge badge-info">Version: 9.0</span>
       </h2>
     </div>
   </div>
@@ -19,7 +19,7 @@
         Congratulations! You successfully built and deployed your code.
       </p>
       <p class="lead">
-        This is a simple single-page calculator app developed with Angular and Bootstrap for the build examples on the <strong>AWS CodePipeline Step by Step</strong> course.
+        This is a simple single-page calculator app developed using Angular 9 and Bootstrap 4.4.1 for our build examples on <strong>AWS CodePipeline Step by Step</strong> course.
       </p>
       <app-calculator></app-calculator>
     </div>
